<resources>
    <string name="app_name">LoginPage</string>
    <string name="sign_up">Sign up</string>
    <string name="l_o_g_i_n">L O G I N</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype-Password</string>
    <string name="username">Username</string>
    <string name="s_i_g_n_u_p">S I G N U P</string>
    <string name="sign_in">Sign in</string>
    <string name="username1">Username</string>
    <string name="password1">Password</string>
    <string name="l_o_g_i_n1">L O G I N</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>