<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="@string/sign_in"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_margin="100dp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edttextround"
        android:drawableLeft="@drawable/baseline_person_add_alt_1_24"
        android:drawablePadding="20dp"
        android:hint="@string/username1"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:hint="@string/password1"
        android:background="@drawable/edttextround"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/baseline_error_outline_24"
        android:drawablePadding="20dp"
        android:layout_margin="10dp"
        android:padding="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#0009ff"
        android:hint="@string/l_o_g_i_n1"
        android:textColorHint="@color/white" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgetpassword"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:layout_below="@+id/login"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/fbb"
            android:layout_margin="10dp"
            />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"

            android:src="@drawable/g"
            />


    </LinearLayout>


</RelativeLayout>